plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.11'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.almaengi'
version = '0.0.1-SNAPSHOT'
description = 'SSAFY 2nd project(fintech) for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.redisson:redisson-spring-boot-starter:3.27.2'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.16'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'

	// Firebase Admin SDK
	implementation 'com.google.firebase:firebase-admin:9.8.0'

	// PDF generation (Flying Saucer HTML→PDF + Thymeleaf template)
	implementation 'org.xhtmlrenderer:flying-saucer-pdf-openpdf:9.3.2'
	implementation 'org.thymeleaf:thymeleaf:3.1.2.RELEASE'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// test용 h2 database 추가
	testRuntimeOnly 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
}
